tests/test_scope/bad/cyclic_scopes.catala_en
## Article

```catala
declaration scope A:
  b scope B
  context output x content integer

declaration scope B:
  a scope A
  context output y content integer

scope A:
  definition x equals b.y

scope B:
  definition y equals a.x
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
Cyclic dependency detected between the following scopes: B → A → B

B is used here in the definition of A:
┌─⯈ tests/test_scope/bad/cyclic_scopes.catala_en:5.3-5.4:
└─┐
5 │   b scope B
  │   ‾
  └─ Article

A is used here in the definition of B:
┌─⯈ tests/test_scope/bad/cyclic_scopes.catala_en:9.3-9.4:
└─┐
9 │   a scope A
  │   ‾
  └─ Article
#return code 123#
```
